[gd_scene load_steps=7 format=3 uid="uid://doknxehicqpn1"]

[ext_resource type="Script" path="res://scripts/Menus/menuPausa.gd" id="1_d7wmh"]
[ext_resource type="Texture2D" uid="uid://c0mbqtswjgp1j" path="res://Assets/ui/Botones/JugarMediano.png" id="4_bo1ap"]
[ext_resource type="Texture2D" uid="uid://2ae0r2xdc7m7" path="res://Assets/ui/Botones/Reiniciar.png" id="6_vwtr8"]
[ext_resource type="Texture2D" uid="uid://db0tiekw8ihw" path="res://Assets/ui/Botones/Niveles.png" id="8_wkxtv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2vqr"]
bg_color = Color(0, 0, 0, 0.384314)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_wn8so"]
font_size = 32

[node name="Menu" type="Control" groups=["menu"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
script = ExtResource("1_d7wmh")
rutaMenuNiveles = "res://scenes/Menus/MenuNiveles.tscn"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -124.0
offset_right = 225.0
offset_bottom = 124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_f2vqr")

[node name="ContenedorBotones" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -24.0
offset_right = 188.0
offset_bottom = 118.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reiniciar" type="Button" parent="Panel/ContenedorBotones"]
layout_mode = 2
focus_mode = 0
text = "REINICIAR"
icon = ExtResource("6_vwtr8")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Reanudar" type="Button" parent="Panel/ContenedorBotones"]
layout_mode = 2
focus_mode = 0
text = "REANUDAR"
icon = ExtResource("4_bo1ap")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Salir" type="Button" parent="Panel/ContenedorBotones"]
layout_mode = 2
focus_mode = 0
text = "SALIR"
icon = ExtResource("8_wkxtv")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0

[node name="Texto" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -46.5
offset_top = 20.0
offset_right = 46.5
offset_bottom = 65.0
grow_horizontal = 2
text = "Pausa"
label_settings = SubResource("LabelSettings_wn8so")

[connection signal="pressed" from="Panel/ContenedorBotones/Reiniciar" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Panel/ContenedorBotones/Reanudar" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/ContenedorBotones/Salir" to="." method="_on_exit_pressed"]
